Fix not visible images in collections section

--- a/assets/collections.css
+++ b/assets/collections.css
@@ -76,8 +76,9 @@
   inset: 0;
 }
 
-.collections__image-wrapper:has(.image-placeholder) {
-  position: static;
+.collections__image-wrapper:has(.collections__image-placeholder) {
+  position: absolute;
+  inset: 0;
 }
 
 .palette-one.collections__wrapper {
